--- a/Graficos/Graficos.vcxproj
+++ b/Graficos/Graficos.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Vertice.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Graficos.cpp" />
